# pphc

./: CLAUDE.md  CMakeLists.txt  README.md
cli/src/: main.c
cmake/: CompilerDetection.cmake
examples/: CMakeLists.txt  custom_allocator.c  example_250m_with_bonuses.c
libpph/include/pph/: pph_calculator.h
libpph/src/: pph21.c  pph22.c  pph23.c  pph4_2.c  pph_breakdown.c  pph_constants.c  pph_internal.h  pph_money.c  ppn.c  ppnbm.c
win32/: CMakeLists.txt  README.md
win32/include/: colors.h  pphcalc.h  resource.h
win32/src/: calculation.c  clipboard.c  colors.c  controls.c  display.c  formatting.c  main.c  mainwnd.c
